--- a/.github/workflows/unittesting.yml
+++ b/.github/workflows/unittesting.yml
@@ -6,8 +6,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: ./install_dependencies.sh
       - run: python -m pip install coverage
       - run: python -m coverage run ./unittesting/core_testing.py
       - run: python -m coverage report
+      - run: coverage html
       - run: python -m coverage run ./unittesting/network_testing.py
       - run: python -m coverage report
+      - run: coverage html
