--- a/.github/workflows/unittesting.yml
+++ b/.github/workflows/unittesting.yml
@@ -6,6 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: chmod +x install_dependencies.sh
       - run: ./install_dependencies.sh
       - run: python -m pip install coverage
       - run: python -m coverage run ./unittesting/core_testing.py
