First test done!

--- a/.github/workflows/unittesting.yml
+++ b/.github/workflows/unittesting.yml
@@ -9,9 +9,11 @@ jobs:
       - run: chmod +x install_dependencies.sh
       - run: ./install_dependencies.sh
       - run: python -m pip install coverage
-      - run: python -m coverage run ./unittesting/core_testing.py
+      - run: python -m coverage run ./unittesting/quiz_main_testing.py
       - run: python -m coverage report
-      - run: coverage html
-      - run: python -m coverage run ./unittesting/network_testing.py
+      - run: python -m coverage run ./unittesting/quiz_methods_testing.py
       - run: python -m coverage report
-      - run: coverage html
+      - run: python -m coverage run ./unittesting/webscraping_testing.py
+      - run: python -m coverage report
+      - run: python -m coverage run ./unittesting/translation_testing.py
+      - run: python -m coverage report
